--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Workshop on Linguistic Creativity"
+title                    : "Workshop on Creativity in Language and Communication"
 title_separator          : "–"
 name                     : "Workshop organisers"
-description              : "The Bielefeld Workshop on Linguistic Creativity"
-url                      : "http://hbuschme.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+description              : "The Bielefeld Workshop on Creativity in Language and Communication"
+url                      : "http://dililab.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/creativity-workshop-2021" # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
