--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
   - title: "Programme"
     url: /programme/
   - title: "Participants"
-    url: /participant/
+    url: /participants/
   - title: "Organisation"
     url: /organisation/
   - title: "Impressum"
