--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ locale                   : "en-US"
 title                    : "Workshop on Creativity in Language and Communication"
 title_separator          : "–"
 name                     : "Workshop organisers"
+logo                     : "/assets/images/ubi-lili-logo.png"
 description              : "The Bielefeld Workshop on Creativity in Language and Communication"
 url                      : "http://dililab.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/creativity-workshop-2021" # the subpath of your site, e.g. "/blog"
