--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "Workshop on Creativity in Language and Communication"
 title_separator          : "–"
-name                     : "Workshop organisers"
+name                     : "Bielefeld University"
 logo                     : "/assets/images/ubi-lili-logo.png"
 description              : "The Bielefeld Workshop on Creativity in Language and Communication"
 url                      : "http://dililab.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
